# Rayz

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: boundingBox.h  bvhNode.h  camera.h  hittable.h  material.h  materials.h  objects.h  ray.h  renderer.h  scene.h  texture.h  textures.h
include/materials/: dielectric.h  diffuseLight.h  lambertian.h  material.h  metal.h
include/objects/: plane.h  sphere.h  triangle.h
include/textures/: checker.h  image.h  noise.h  solidColor.h  texture.h
libs/: CMakeLists.txt
src/: boudingBox.cpp  bvhNode.cpp  camera.cpp  hittable.cpp  material.cpp  renderer.cpp  scene.cpp  texture.cpp
src/materials/: dielectric.cpp  diffuseLight.cpp  lambertian.cpp  metal.cpp
src/objects/: plane.cpp  sphere.cpp  triangle.cpp
src/textures/: checkerTexture.cpp  imageTexture.cpp  noise.cpp  solidColorTexture.cpp
